--- a/config.env
+++ b/config.env
@@ -1,15 +1,8 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
-
-# RECOMMNED SETUP 
-## Setup only Required Config & DATABASE_URL
-## Rest of variable can be setup using BOT by /bsetting command
-
 # REQUIRED CONFIG
-BOT_TOKEN = ""
-OWNER_ID = ""
-TELEGRAM_API = ""
-TELEGRAM_HASH = ""
+BOT_TOKEN = "6040879258:AAG_6EQXN85ARnBtufFJe_Su2GHn09weVLo"
+OWNER_ID = "1074450690"
+TELEGRAM_API = "17796978"
+TELEGRAM_HASH = "89559195f923f804c3064a62db5f51ea"
 
 # OPTIONAL CONFIG
 GDRIVE_ID = ""
